--- a/applied stats (2023).tex
+++ b/applied stats (2023).tex
@@ -116,6 +116,8 @@
 \include{topics/optimization.tex}
 \newpage 
 \include{topics/linear_algebra.tex}
+\include{topics/deviance}
+\newpage
 
 % % Solutions
 \include{solutions/applied_2011.tex}
