--- a/topics/glms.tex
+++ b/topics/glms.tex
@@ -1,7 +1,6 @@
-\section{Generalized Linear Models \footnote{Gene Katsevich, Stephen Bates, Nikos Ignatiadis, Isaac Gibbs, Dan Kluger and M.H.}}
+\section{Generalized Linear Models \footnote{Gene Katsevich, Stephen Bates, Nikos Ignatiadis, Isaac Gibbs, Dan Kluger and M.H.}}\label{sec:GLM}
 
 \subsection{Definitions}
-
 Let
 \begin{equation}\label{exp}
     f_\eta(y) =  \exp\left(\eta y - \psi(\eta)\right)f_0(y), 
