--- a/Code/student_mixture.ipynb
+++ b/Code/student_mixture.ipynb
@@ -20,16 +20,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\micha\\Documents\\GitHub\\Applied-Coaching\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x22f7ea2c7d0>"
+       "<matplotlib.collections.PathCollection at 0x1fa3befe510>"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +99,7 @@
        "torch.Size([305, 4])"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +329,7 @@
        "tensor([0.1861])"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +364,7 @@
        "tensor(-534.7727)"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,16 +407,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22f7d878c50>]"
+       "[<matplotlib.lines.Line2D at 0x1fa3bf650d0>]"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -436,16 +444,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x22f7d8f9f10>"
+       "<matplotlib.collections.PathCollection at 0x1fa3befd250>"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -475,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -504,16 +512,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x22f7ebdf550>"
+       "<matplotlib.collections.PathCollection at 0x1fa3f3609d0>"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
